--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VisonSoft</title>
-    <link rel="stylesheet" href="lib/bootstrap-5.3.2-dist/css/bootstrap.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-    <script src="lib/bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
   </head>
   <body>
     
+    <!-- Bootstrap JS-->
+    <script src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
