--- a/index.html
+++ b/index.html
@@ -1,17 +1,211 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VisonSoft</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-  </head>
-  <body>
-    
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>VisonSoft</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+  <!-- Favicon.ico -->
+  <link rel="icon" type="image/x-icon" href="img/logo.png">
+  <!-- INDEX CSS -->
+  <link rel="stylesheet" href="css/index.css">
+</head>
+
+<body>
+  <div class="divContent">
+    <!-- MENU -->
+    <header class="d-flex flex-wrap align-items-center justify-content-center
+    justify-content-md-between py-3 border-bottom" style="background:linear-gradient(170deg,   #0c640e  ,  #1b1e1c);">
+
+      <!-- LOGO Y NOMBRE -->
+      <div class="col-md-3 mb-md-0">
+        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center">
+          <img src="img/logo1.3.png" class="img-thumbnail ms-5" width="90px" alt="">
+          <h4 class="m-0 ms-3" style="color:#0df74d">VISIONSOFT</h4>
+        </a>
+      </div>
+
+      <!-- FIN LOGO Y NOMBRE -->
+
+      <!-- LINKS -->
+      <nav>
+        <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
+          <li><a href="index.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">HOME</a></li>
+          <li><a href="portfolio/portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a></li>
+          <li><a href="about.html" class="nav-link px-2 link-light">ABOUT US</a></li>
+          <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
+        </ul>
+      </nav>
+      <!-- FIN LINKS -->
+    </header>
+    <!-- FIN MENU -->
+
+    <!-- CAROUSEL -->
+    <div id="carouselExampleIndicators" class="carousel slide mb-5" style="margin-top: -1px;">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/slide1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/slide2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/slide3.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- FIN CAROUSEL -->
+
+    <!-- PERFIL DE EQUIPO -->
+    <h4 class="text-center">Who are the VisionSoft team?</h4>
+    <div class="hex-container">
+      <!-- Hexágono 1 -->
+      <div class="hex">
+        <div class="hex-inner">
+          <img src="img/julian.jpg" class="hex-image">
+        </div>
+      </div>
+
+      <!-- Hexágono 2 -->
+      <div class="hex mt-5">
+        <div class="hex-inner">
+          <img src="img/julian.jpg" class="hex-image">
+        </div>
+      </div>
+
+      <!-- Hexágono 3 -->
+      <div class="hex">
+        <div class="hex-inner">
+          <img src="img/julian.jpg" class="hex-image">
+        </div>
+      </div>
+
+      <!-- Hexágono 4 -->
+      <div class="hex mt-5">
+        <div class="hex-inner">
+          <img src="img/julian.jpg" class="hex-image">
+        </div>
+      </div>
+
+      <!-- Hexágono 5 -->
+      <div class="hex">
+        <div class="hex-inner">
+          <img src="img/julian.jpg" class="hex-image">
+        </div>
+      </div>
+    </div>
+    <!-- FIN PERFIL DE EQUIPO -->
+
+    <div class="container-fluid">
+      <!-- SERVICES -->
+      <hr>
+      <h3 class="text-center my-4">Services</h3>
+      <div class="row -flex align-items-center justify-content-center text-center">
+        <div class="col-sm-3">
+          <img src="img/service1.jpg" class="rounded img-fluid zoom-image" alt="">
+          <span>Web Development</span>
+        </div>
+        <div class="col-sm-3">
+          <img src="img/service2.jpeg" class="rounded img-fluid zoom-image" alt="">
+          <span>REST API</span>
+        </div>
+        <div class="col-sm-3">
+          <img src="img/service3.png" class="rounded img-fluid zoom-image" alt="">
+          <span>User Interface</span>
+        </div>
+      </div><br>
+
+
+      <div class="row -flex align-items-center justify-content-center text-center">
+        <div class="col-sm-3">
+          <img src="img/service4.jpg" class="rounded img-fluid zoom-image">
+          <span>User Expecience</span>
+        </div>
+        <div class="col-sm-3">
+          <img src="img/service5.png" class="rounded img-fluid zoom-image">
+          <span>Web Design</span>
+        </div>
+      </div>
+      <!-- FIN SERVICES -->
+
+      <!-- OURS SKILLS -->
+      <h3 class="text-center my-4">Ours Skills</h3>
+      <div class="row -flex align-items-center justify-content-center text-center">
+        <div class="col-sm-3">
+          <img src="img/react.png" class="rounded img-fluid zoom-image">
+        </div>
+        <div class="col-sm-3">
+          <img src="img/node.jpg" class="rounded img-fluid zoom-image">
+        </div>
+        <div class="col-sm-3">
+          <img src="img/angular.jpg" class="rounded img-fluid zoom-image">
+        </div>
+      </div><br>
+
+      <div class="row -flex align-items-center justify-content-center text-center">
+        <div class="col-sm-3">
+          <img src="img/MySQL.jpg" class="rounded img-fluid zoom-image">
+        </div>
+        <div class="col-sm-3">
+          <img src="img/api.png" class="rounded img-fluid zoom-image">
+        </div>
+        <div class="col-sm-3">
+          <img src="img/mongo.png" class="rounded img-fluid zoom-image">
+        </div>
+      </div><br>
+      <!-- FIN OURS SKILLS -->
+
+      <!-- OUR HISTORY -->
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <h3>OUR History</h3>
+          <p>It all started with a simple idea "to work in what we like," most of the members experienced
+            what is the sacrifice of working in something totally different from the technology area, and
+            end up in despair in a place where our effort is not valued nor the hours and hours of effort.
+          </p>
+
+          <p>With this in mind, we decided to start a business so that in the future we could work in what
+            we like and earn a decent living.
+          </p>
+        </div>
+        <div class="col-md-6 text-center">
+          <img src="img/equipo.jpg" class="mx-auto rounded zoom-image" width="500">
+        </div>
+      </div>
+      <!-- FIN OUR HISTORY -->
+    </div><br><br>
+
+    <!-- FOOTER -->
+    <footer class="text-white text-center py-3" style="background-color: #0d4b0f ;">
+      <p>© 2023 VisionSoft | All rights reserved</p>
+    </footer>
+    <!-- FIN FOOTER -->
+
     <!-- Bootstrap JS-->
     <script src="js/bootstrap.bundle.min.js"></script>
-  </body>
+  </div>
+</body>
+
 </html>
