--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
   <!-- Favicon.ico -->
-  <link rel="icon" type="image/x-icon" href="img/logo.png">
+  <link rel="icon" type="image/x-icon" href="img/logo1.3.png">
   <!-- INDEX CSS -->
   <link rel="stylesheet" href="css/index.css">
 </head>
@@ -45,7 +45,7 @@
     <!-- FIN MENU -->
 
     <!-- CAROUSEL -->
-    <div id="carouselExampleIndicators" class="carousel slide mb-5" style="margin-top: -1px;">
+    <div id="carouselExampleIndicators" class="carousel slide" style="margin-top: -1px;">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
@@ -77,125 +77,122 @@
       </button>
     </div>
     <!-- FIN CAROUSEL -->
+    <div style="border: 1px solid greenyellow; padding-top: 30px;">
+      <!-- PERFIL DE EQUIPO -->
+      <h3 class="text-center">Who are the VisionSoft team?</h4>
+        <div class="d-flex" style="justify-content: center;">
+          <!-- Hexágono 1 -->
+          <div>
+            <img src="img/Sam1.png" height="150px">
+          </div>
 
-    <!-- PERFIL DE EQUIPO -->
-    <h4 class="text-center">Who are the VisionSoft team?</h4>
-    <div class="hex-container">
-      <!-- Hexágono 1 -->
-      <div class="hex">
-        <div class="hex-inner">
-          <img src="img/julian.jpg" class="hex-image">
-        </div>
-      </div>
+          <!-- Hexágono 2 -->
+          <div>
+            <img src="img/Sam1.png" height="150px">
+          </div>
 
-      <!-- Hexágono 2 -->
-      <div class="hex mt-5">
-        <div class="hex-inner">
-          <img src="img/julian.jpg" class="hex-image">
-        </div>
-      </div>
+          <!-- Hexágono 3 -->
+          <div>
+            <img src="img/Sam1.png" height="150px">
+          </div>
 
-      <!-- Hexágono 3 -->
-      <div class="hex">
-        <div class="hex-inner">
-          <img src="img/julian.jpg" class="hex-image">
-        </div>
-      </div>
+          <!-- Hexágono 4 -->
+          <div>
+            <img src="img/Sam1.png" height="150px">
+          </div>
 
-      <!-- Hexágono 4 -->
-      <div class="hex mt-5">
-        <div class="hex-inner">
-          <img src="img/julian.jpg" class="hex-image">
-        </div>
-      </div>
+          <!-- Hexágono 5 -->
+          <div>
+            <img src="img/Sam1.png" height="150px">
+          </div>
 
-      <!-- Hexágono 5 -->
-      <div class="hex">
-        <div class="hex-inner">
-          <img src="img/julian.jpg" class="hex-image">
+          <!-- Hexágono 6 -->
+          <div>
+            <img src="img/Sam1.png" height="150px">
+          </div>
+
         </div>
-      </div>
+        <!-- FIN PERFIL DE EQUIPO -->
+
+        <div class="container-fluid">
+          <!-- SERVICES -->
+          <hr>
+          <h3 class="text-center my-4">Services</h3>
+          <div class="row -flex align-items-center justify-content-center text-center">
+            <div class="col-sm-3">
+              <img src="img/service1.jpg" class="rounded img-fluid zoom-image" alt="">
+              <span>Web Development</span>
+            </div>
+            <div class="col-sm-3">
+              <img src="img/service2.jpeg" class="rounded img-fluid zoom-image" alt="">
+              <span>REST API</span>
+            </div>
+            <div class="col-sm-3">
+              <img src="img/service3.png" class="rounded img-fluid zoom-image" alt="">
+              <span>User Interface</span>
+            </div>
+          </div><br>
+
+
+          <div class="row -flex align-items-center justify-content-center text-center">
+            <div class="col-sm-3">
+              <img src="img/service4.jpg" class="rounded img-fluid zoom-image">
+              <span>User Expecience</span>
+            </div>
+            <div class="col-sm-3">
+              <img src="img/service5.png" class="rounded img-fluid zoom-image">
+              <span>Web Design</span>
+            </div>
+          </div>
+          <!-- FIN SERVICES -->
+
+          <!-- OURS SKILLS -->
+          <h3 class="text-center my-4">Ours Skills</h3>
+          <div class="row -flex align-items-center justify-content-center text-center">
+            <div class="col-sm-3">
+              <img src="img/react.png" class="rounded img-fluid zoom-image">
+            </div>
+            <div class="col-sm-3">
+              <img src="img/node.jpg" class="rounded img-fluid zoom-image">
+            </div>
+            <div class="col-sm-3">
+              <img src="img/angular.jpg" class="rounded img-fluid zoom-image">
+            </div>
+          </div><br>
+
+          <div class="row -flex align-items-center justify-content-center text-center">
+            <div class="col-sm-3">
+              <img src="img/MySQL.jpg" class="rounded img-fluid zoom-image">
+            </div>
+            <div class="col-sm-3">
+              <img src="img/api.png" class="rounded img-fluid zoom-image">
+            </div>
+            <div class="col-sm-3">
+              <img src="img/mongo.png" class="rounded img-fluid zoom-image">
+            </div>
+          </div><br>
+          <!-- FIN OURS SKILLS -->
+
+          <!-- OUR HISTORY -->
+          <div class="row align-items-center">
+            <div class="col-md-6">
+              <h3>OUR History</h3>
+              <p>It all started with a simple idea "to work in what we like," most of the members experienced
+                what is the sacrifice of working in something totally different from the technology area, and
+                end up in despair in a place where our effort is not valued nor the hours and hours of effort.
+              </p>
+
+              <p>With this in mind, we decided to start a business so that in the future we could work in what
+                we like and earn a decent living.
+              </p>
+            </div>
+            <div class="col-md-6 text-center">
+              <img src="img/equipo.jpg" class="mx-auto rounded zoom-image" width="500">
+            </div>
+          </div>
+          <!-- FIN OUR HISTORY -->
+        </div><br><br>
     </div>
-    <!-- FIN PERFIL DE EQUIPO -->
-
-    <div class="container-fluid">
-      <!-- SERVICES -->
-      <hr>
-      <h3 class="text-center my-4">Services</h3>
-      <div class="row -flex align-items-center justify-content-center text-center">
-        <div class="col-sm-3">
-          <img src="img/service1.jpg" class="rounded img-fluid zoom-image" alt="">
-          <span>Web Development</span>
-        </div>
-        <div class="col-sm-3">
-          <img src="img/service2.jpeg" class="rounded img-fluid zoom-image" alt="">
-          <span>REST API</span>
-        </div>
-        <div class="col-sm-3">
-          <img src="img/service3.png" class="rounded img-fluid zoom-image" alt="">
-          <span>User Interface</span>
-        </div>
-      </div><br>
-
-
-      <div class="row -flex align-items-center justify-content-center text-center">
-        <div class="col-sm-3">
-          <img src="img/service4.jpg" class="rounded img-fluid zoom-image">
-          <span>User Expecience</span>
-        </div>
-        <div class="col-sm-3">
-          <img src="img/service5.png" class="rounded img-fluid zoom-image">
-          <span>Web Design</span>
-        </div>
-      </div>
-      <!-- FIN SERVICES -->
-
-      <!-- OURS SKILLS -->
-      <h3 class="text-center my-4">Ours Skills</h3>
-      <div class="row -flex align-items-center justify-content-center text-center">
-        <div class="col-sm-3">
-          <img src="img/react.png" class="rounded img-fluid zoom-image">
-        </div>
-        <div class="col-sm-3">
-          <img src="img/node.jpg" class="rounded img-fluid zoom-image">
-        </div>
-        <div class="col-sm-3">
-          <img src="img/angular.jpg" class="rounded img-fluid zoom-image">
-        </div>
-      </div><br>
-
-      <div class="row -flex align-items-center justify-content-center text-center">
-        <div class="col-sm-3">
-          <img src="img/MySQL.jpg" class="rounded img-fluid zoom-image">
-        </div>
-        <div class="col-sm-3">
-          <img src="img/api.png" class="rounded img-fluid zoom-image">
-        </div>
-        <div class="col-sm-3">
-          <img src="img/mongo.png" class="rounded img-fluid zoom-image">
-        </div>
-      </div><br>
-      <!-- FIN OURS SKILLS -->
-
-      <!-- OUR HISTORY -->
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <h3>OUR History</h3>
-          <p>It all started with a simple idea "to work in what we like," most of the members experienced
-            what is the sacrifice of working in something totally different from the technology area, and
-            end up in despair in a place where our effort is not valued nor the hours and hours of effort.
-          </p>
-
-          <p>With this in mind, we decided to start a business so that in the future we could work in what
-            we like and earn a decent living.
-          </p>
-        </div>
-        <div class="col-md-6 text-center">
-          <img src="img/equipo.jpg" class="mx-auto rounded zoom-image" width="500">
-        </div>
-      </div>
-      <!-- FIN OUR HISTORY -->
-    </div><br><br>
 
     <!-- FOOTER -->
     <footer class="text-white text-center py-3" style="background-color: #0d4b0f ;">
