--- a/index.html
+++ b/index.html
@@ -19,28 +19,25 @@
   <div class="divContent">
     <!-- MENU -->
     <header class="d-flex flex-wrap align-items-center justify-content-center
-    justify-content-md-between py-3 border-bottom" style="background:linear-gradient(170deg,   #0c640e  ,  #1b1e1c);">
+    justify-content-md-between border-bottom" style="background:linear-gradient(170deg,   #0c640e  ,  #1b1e1c);;">
 
       <!-- LOGO Y NOMBRE -->
       <div class="col-md-3 mb-md-0">
-        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center">
-          <img src="img/logo1.3.png" class="img-thumbnail ms-5" width="90px" alt="">
+        <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center">
+          <img src="img/logo1.3.png" class="img-thumbnail ms-3" width="80px" alt="" style="background-color: transparent; border: none;">
           <h4 class="m-0 ms-3" style="color:#0df74d">VISIONSOFT</h4>
         </a>
       </div>
-
-      <!-- FIN LOGO Y NOMBRE -->
 
       <!-- LINKS -->
       <nav>
         <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
           <li><a href="index.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">HOME</a></li>
-          <li><a href="portfolio/portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a></li>
+          <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a></li>
           <li><a href="about.html" class="nav-link px-2 link-light">ABOUT US</a></li>
           <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
         </ul>
       </nav>
-      <!-- FIN LINKS -->
     </header>
     <!-- FIN MENU -->
 
@@ -80,35 +77,53 @@
     <div style="border: 1px solid greenyellow; padding-top: 30px;">
       <!-- PERFIL DE EQUIPO -->
       <h3 class="text-center">Who are the VisionSoft team?</h4>
-        <div class="d-flex" style="justify-content: center;">
+        <div class="d-flex" style="justify-content: center; margin-top: 70px;">
           <!-- Hexágono 1 -->
-          <div>
-            <img src="img/Sam1.png" height="150px">
+          <div style="height: 360px;">
+            <div style="text-align: center;">
+              <img src="img/Sam1.png" height="150px">
+              <h4>Samuel</h4>
+            </div>
           </div>
 
           <!-- Hexágono 2 -->
-          <div>
-            <img src="img/Sam1.png" height="150px">
+          <div style="display: flex; height: 360px; align-items: center; margin: 5px;">
+            <div style="text-align: center;">
+              <img src="img/Sam1.png" height="150px">
+              <h4>Samuel</h4>
+            </div>
           </div>
 
           <!-- Hexágono 3 -->
-          <div>
-            <img src="img/Sam1.png" height="150px">
+          <div style="height: 360px;">
+            <div style="text-align: center;">
+              <img src="img/Sam1.png" height="150px">
+              <h4>Samuel</h4>
+            </div>
           </div>
 
           <!-- Hexágono 4 -->
-          <div>
-            <img src="img/Sam1.png" height="150px">
+          <div style="display: flex; height: 360px; align-items: center; margin: 5px;">
+            <div style="text-align: center;">
+              <img src="img/Sam1.png" height="150px">
+              <h4>Samuel</h4>
+            </div>
           </div>
 
           <!-- Hexágono 5 -->
-          <div>
-            <img src="img/Sam1.png" height="150px">
+          <div style="height: 360px;">
+            <div style="text-align: center;">
+              <img src="img/Sam1.png" height="150px">
+              <h4>Samuel</h4>
+            </div>
           </div>
 
           <!-- Hexágono 6 -->
-          <div>
-            <img src="img/Sam1.png" height="150px">
+          <div style="display: flex; height: 360px; align-items: center; margin: 5px;">
+            <div style="text-align: center;">
+              <img src="img/Sam1.png" height="150px">
+              <h4>Samuel</h4>
+            </div>
           </div>
 
         </div>
