--- a/about.html
+++ b/about.html
@@ -2,53 +2,47 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About US</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About us</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <!-- Favicon.ico -->
-    <link rel="icon" type="image/x-icon" href="img/logo.png">
+    <link rel="icon" type="image/x-icon" href="img/logo1.3.png">
     <!-- INDEX CSS -->
     <link rel="stylesheet" href="css/index.css">
-</head>
+  </head>
 
 <body>
+  <div class="divContent">
     <!-- MENU -->
     <header class="d-flex flex-wrap align-items-center justify-content-center
-  justify-content-md-between py-3 border-bottom" style="background:linear-gradient(170deg,   #0c640e  ,  #1b1e1c);">
+    justify-content-md-between border-bottom" style="background:linear-gradient(170deg,   #0c640e  ,  #1b1e1c);;">
 
-        <!-- LOGO Y NOMBRE -->
-        <div class="col-md-3 mb-md-0">
-            <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center">
-                <img src="img/logo.png" class="img-thumbnail ms-5" width="90px" alt="">
-                <h4 class="m-0 ms-3" style="color:#0df74d">VISIONSOFT</h4>
-            </a>
-        </div>
+      <!-- LOGO Y NOMBRE -->
+      <div class="col-md-3 mb-md-0">
+        <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center">
+          <img src="img/logo1.3.png" class="img-thumbnail ms-3" width="80px" alt="" style="background-color: transparent; border: none;">
+          <h4 class="m-0 ms-3" style="color:#0df74d">VISIONSOFT</h4>
+        </a>
+      </div>
 
-        <!-- FIN LOGO Y NOMBRE -->
+      <!-- FIN LOGO Y NOMBRE -->
 
-        <!-- LINKS -->
-        <nav>
-            <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
-                <li><a href="index.html" class="nav-link px-2 link-light">HOME</a></li>
-                <li><a href="portfolio/portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a></li>
-                <li><a href="about.html" class="nav-link px-2 link-dark bg-white rounded p-2 seleccionado">ABOUT US</a>
-                </li>
-                <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
-            </ul>
-        </nav>
-        <!-- FIN LINKS -->
+      <!-- LINKS -->
+      <nav>
+        <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
+          <li><a href="index.html" class="nav-link px-2 link-light">HOME</a></li>
+          <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a></li>
+          <li><a href="about.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">ABOUT US</a></li>
+          <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
+        </ul>
+      </nav>
+      <!-- FIN LINKS -->
     </header>
     <!-- FIN MENU -->
-
-    <!-- IMAGEN  SOBRE NOSOTROS-->
-    <section>
-        <img src="img/slide1.jpg" width="100%">
-    </section>
-    <!-- FIN IMAGEN  SOBRE NOSOTROS-->
 
     <!-- FOTOS DE CADA EQUIPOS-->
     <div class="container-fluid">
@@ -66,9 +60,9 @@
             <div class="col-md-6 text-center">
                 <img src="img/julian.jpg" class="mx-auto rounded-circle" width="300">
             </div>
-        </div><hr>
+        </div>
         <!-- FIN JULIAN ANGEL-->
-
+        <hr>
         <!-- SAMUEL BURELOS-->
         <div class="row align-items-center">
             <div class="col-md-6 text-center">
@@ -83,9 +77,9 @@
                     we like and earn a decent living.
                 </p>
             </div>
-        </div><hr>
+        </div>
         <!-- FIN SAMUEL BURELOS-->
-
+        <hr>
         <!-- RODOLFO CORDOVA-->
         <div class="row align-items-center">
             <div class="col-md-6 ps-5">
@@ -102,7 +96,7 @@
             </div>
         </div>
         <!-- FIN RODOLFO CORDOVA-->
-
+        <hr>
         <!-- NAYELI-->
         <div class="row align-items-center">
             <div class="col-md-6 text-center">
@@ -117,7 +111,7 @@
                     we like and earn a decent living.
                 </p>
             </div>
-        </div><hr>
+        </div>
         <!-- FIN NAYELI-->
     </div>
     
@@ -131,6 +125,7 @@
 
     <!-- Bootstrap JS-->
     <script src="js/bootstrap.bundle.min.js"></script>
+    </div>
 </body>
 
 </html>
