--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VisonSoft</title>
+    <title>Portfolio</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Bootstrap Icons -->
@@ -16,7 +16,7 @@
   </head>
 
 <body>
-    <div class="divContent">
+  <div class="divContent">
     <!-- MENU -->
     <header class="d-flex flex-wrap align-items-center justify-content-center
     justify-content-md-between border-bottom" style="background:linear-gradient(170deg,   #0c640e  ,  #1b1e1c);;">
@@ -33,36 +33,14 @@
       <nav>
         <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
           <li><a href="index.html" class="nav-link px-2 link-light">HOME</a></li>
-          <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a></li>
+          <li><a href="portfolio.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">PORTFOLIO</a></li>
           <li><a href="about.html" class="nav-link px-2 link-light">ABOUT US</a></li>
-          <li><a href="contact.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">CONTACT US</a></li>
+          <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
         </ul>
       </nav>
     </header>
     <!-- FIN MENU -->
 
-    <!-- FORMULARIO -->
-    <div class="container-fluid">
-        <h3 class="text-center py-4">Contáctanos</h3>
-        <div class="row justify-content-center">
-            <div class="col-md-5">
-                <form action="" method="" autocomplete="off" class="rounded p-4" style="background-color:#d8d8d8;">
-                    <label for="correo">Correo Electrónico:</label>
-                    <input type="text" name="correo" id="correo" class="form-control"><br>
-                    <label for="Celular">Teléfono Celular:</label>
-                    <input type="text" name="Celular" id="Celular" class="form-control"><br>
-                    <label for="asunto">Asunto:</label>
-                    <input type="text" name="asunto" id="asunto" class="form-control"><br>
-                    <label for="mensaje">Tu Mensaje:</label>
-                    <textarea name="mensaje" id="mensaje" class="form-control" rows="4"></textarea><br><br>
-                    <div class="text-center">
-                        <button type="submit" name="enviar" class="btn btn-primary">Enviar</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div><br><br>
-    <!-- FIN FORMULARIO -->
 
     <!-- FOOTER -->
     <footer class="text-white text-center py-3" style="background-color: #0d4b0f ;">
@@ -72,7 +50,7 @@
 
     <!-- Bootstrap JS-->
     <script src="js/bootstrap.bundle.min.js"></script>
-</div>
+  </div>
 </body>
 
 </html>
