--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
       </button>
     </div>
     <!-- FIN CAROUSEL -->
-    <div style="border: 1px solid greenyellow; padding-top: 30px;">
+    <div style="padding: 30px;">
       <!-- PERFIL DE EQUIPO -->
       <h3 class="text-center">Who are the VisionSoft team?</h4>
-        <div class="d-flex" style="justify-content: center; margin-top: 70px;">
+        <div class="profile d-flex justify-content-center">
           <!-- Hexágono 1 -->
           <div style="height: 360px;">
             <div style="text-align: center;">
@@ -89,8 +89,8 @@
           <!-- Hexágono 2 -->
           <div style="display: flex; height: 360px; align-items: center; margin: 5px;">
             <div style="text-align: center;">
-              <img src="img/Sam1.png" height="150px">
-              <h4>Samuel</h4>
+              <img src="img/Julian1.png" height="150px">
+              <h4>Julian</h4>
             </div>
           </div>
 
@@ -135,35 +135,33 @@
           <h3 class="text-center my-4">Services</h3>
           <div class="row -flex align-items-center justify-content-center text-center">
             <div class="col-sm-3">
-              <img src="img/service1.jpg" class="rounded img-fluid zoom-image" alt="">
-              <span>Web Development</span>
+              <img src="img/SS_1.png"  style="overflow: hidden; border-radius: 5px;" class="rounded img-fluid zoom-image" alt="">
             </div>
-            <div class="col-sm-3">
-              <img src="img/service2.jpeg" class="rounded img-fluid zoom-image" alt="">
-              <span>REST API</span>
+            <div class="col-sm-3" style="overflow: hidden; border-radius: 5px;">
+              <img src="img/SS_2.png" class="rounded img-fluid zoom-image" alt="">
             </div>
-            <div class="col-sm-3">
-              <img src="img/service3.png" class="rounded img-fluid zoom-image" alt="">
-              <span>User Interface</span>
+            <div class="col-sm-3" style="overflow: hidden; border-radius: 5px;">
+              <img src="img/SS_3.png" class="rounded img-fluid zoom-image" alt="">
             </div>
           </div><br>
 
 
           <div class="row -flex align-items-center justify-content-center text-center">
-            <div class="col-sm-3">
-              <img src="img/service4.jpg" class="rounded img-fluid zoom-image">
-              <span>User Expecience</span>
+            <div class="col-sm-3" style="overflow: hidden; border-radius: 5px;">
+              <img src="img/SS_4.png" class="rounded img-fluid zoom-image">
             </div>
-            <div class="col-sm-3">
-              <img src="img/service5.png" class="rounded img-fluid zoom-image">
-              <span>Web Design</span>
+            <div class="col-sm-3" style="overflow: hidden; border-radius: 5px;">
+              <img src="img/SS_5.png" class="rounded img-fluid zoom-image">
             </div>
           </div>
           <!-- FIN SERVICES -->
-
+          <br>
+          <br>
+          <br>
+          <br>
           <!-- OURS SKILLS -->
           <h3 class="text-center my-4">Ours Skills</h3>
-          <div class="row -flex align-items-center justify-content-center text-center">
+          <div class="row d-flex align-items-center justify-content-center text-center">
             <div class="col-sm-3">
               <img src="img/react.png" class="rounded img-fluid zoom-image">
             </div>
@@ -189,20 +187,20 @@
           <!-- FIN OURS SKILLS -->
 
           <!-- OUR HISTORY -->
-          <div class="row align-items-center">
+          <div class="ourHistory">
             <div class="col-md-6">
-              <h3>OUR History</h3>
-              <p>It all started with a simple idea "to work in what we like," most of the members experienced
+              <h3>Our History</h3>
+              <p style="font-size: 20px; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">It all started with a simple idea "to work in what we like," most of the members experienced
                 what is the sacrifice of working in something totally different from the technology area, and
                 end up in despair in a place where our effort is not valued nor the hours and hours of effort.
               </p>
 
-              <p>With this in mind, we decided to start a business so that in the future we could work in what
+              <p style="font-size: 20px; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">With this in mind, we decided to start a business so that in the future we could work in what
                 we like and earn a decent living.
               </p>
             </div>
             <div class="col-md-6 text-center">
-              <img src="img/equipo.jpg" class="mx-auto rounded zoom-image" width="500">
+              <img src="img/equipo.jpg" class="mx-auto rounded zoom-image" width="500" style="box-shadow: 12px 12px 10px 4px rgb(0, 0, 0);">
             </div>
           </div>
           <!-- FIN OUR HISTORY -->
