--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <!-- LOGO Y NOMBRE -->
       <div class="col-md-3 mb-md-0">
         <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center">
-          <img src="img/logo1.3.png" class="img-thumbnail ms-3" width="80px" alt="" style="background-color: transparent; border: none;">
+          <img src="img/logo1.3.png" class="img-thumbnail ms-3" width="80px" alt=""
+            style="background-color: transparent; border: none;">
           <h4 class="m-0 ms-3" style="color:#0df74d">VISIONSOFT</h4>
         </a>
       </div>
@@ -34,6 +35,7 @@
         <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
           <li><a href="index.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">HOME</a></li>
           <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a></li>
+          <li><a href="about.html" class="nav-link px-2 link-light">GALLERY</a></li>
           <li><a href="about.html" class="nav-link px-2 link-light">ABOUT US</a></li>
           <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
         </ul>
@@ -135,7 +137,8 @@
           <h3 class="text-center my-4">Services</h3>
           <div class="row -flex align-items-center justify-content-center text-center">
             <div class="col-sm-3">
-              <img src="img/SS_1.png"  style="overflow: hidden; border-radius: 5px;" class="rounded img-fluid zoom-image" alt="">
+              <img src="img/SS_1.png" style="overflow: hidden; border-radius: 5px;" class="rounded img-fluid zoom-image"
+                alt="">
             </div>
             <div class="col-sm-3" style="overflow: hidden; border-radius: 5px;">
               <img src="img/SS_2.png" class="rounded img-fluid zoom-image" alt="">
@@ -190,17 +193,20 @@
           <div class="ourHistory">
             <div class="col-md-6">
               <h3>Our History</h3>
-              <p style="font-size: 20px; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">It all started with a simple idea "to work in what we like," most of the members experienced
+              <p style="font-size: 20px; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">It
+                all started with a simple idea "to work in what we like," most of the members experienced
                 what is the sacrifice of working in something totally different from the technology area, and
                 end up in despair in a place where our effort is not valued nor the hours and hours of effort.
               </p>
 
-              <p style="font-size: 20px; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">With this in mind, we decided to start a business so that in the future we could work in what
+              <p style="font-size: 20px; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+                With this in mind, we decided to start a business so that in the future we could work in what
                 we like and earn a decent living.
               </p>
             </div>
             <div class="col-md-6 text-center">
-              <img src="img/equipo.jpg" class="mx-auto rounded zoom-image" width="500" style="box-shadow: 12px 12px 10px 4px rgb(0, 0, 0);">
+              <img src="img/equipo.jpg" class="mx-auto rounded zoom-image" width="500"
+                style="box-shadow: 12px 12px 10px 4px rgb(0, 0, 0);">
             </div>
           </div>
           <!-- FIN OUR HISTORY -->
