updated the index with photos of team

--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
                 <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
                     <li><a href="index.html" class="nav-link px-2 link-light">HOME</a></li>
                     <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a></li>
+                    <li><a href="gallery.html" class="nav-link px-2 link-light">GALLERY</a></li>
                     <li><a href="about.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">ABOUT
                             US</a></li>
                     <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
@@ -51,7 +52,7 @@
             <!-- JULIAN ANGEL-->
             <div class="row align-items-center justify-content-center zoomImage">
                 <div class="col-md-6 ps-5">
-                    <h3>Eduardo Julián Julián Ángel</h3>
+                    <h3>Samuel Burelos Jerónimo</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur magni repellendus, non
                         soluta delectus reiciendis ipsam pariatur dolore, animi beatae illum aperiam fuga nesciunt
                         ratione hic molestias mollitia eos iure?
@@ -62,7 +63,7 @@
                     </p>
                 </div>
                 <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="img/julian.jpg" style="box-shadow: 12px 8px 16px 0px rgb(67, 0, 100) ;"
+                    <img src="img/integrantes/samyXD.jpeg" style="box-shadow: 12px 8px 16px 0px rgb(67, 0, 100) ;"
                         class="mx-auto rounded-circle" height="300">
                 </div>
             </div>
@@ -71,11 +72,11 @@
             <!-- SAMUEL BURELOS-->
             <div class="row align-items-center justify-content-center zoomImage">
                 <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="img/samyXD.jpeg" class="mx-auto rounded-circle"
+                    <img src="img/integrantes/julian.jpg" class="mx-auto rounded-circle"
                         style="box-shadow: -12px 8px 16px 0px rgb(0, 0, 100) ;" width="300">
                 </div>
                 <div class="col-md-6 ps-5">
-                    <h3>Samuel Burelos Jerónimo</h3>
+                    <h3>Eduardo Julián Julián Ángel</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur magni repellendus, non
                         soluta delectus reiciendis ipsam pariatur dolore, animi beatae illum aperiam fuga nesciunt
                         ratione hic molestias mollitia eos iure?
@@ -102,7 +103,8 @@
                     </p>
                 </div>
                 <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="" class="mx-auto rounded-circle" width="300">
+                    <img src="img/integrantes/rodolfo.jpg" style="box-shadow: 12px 8px 16px 0px rgb(67, 0, 100) ;"
+                        class="mx-auto rounded-circle" width="300">
                 </div>
             </div>
             <!-- FIN RODOLFO CORDOVA-->
@@ -110,7 +112,8 @@
             <!-- NAYELI-->
             <div class="row align-items-center justify-content-center zoomImage">
                 <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="" class="mx-auto rounded-circle" width="300">
+                    <img src="img/integrantes/nallely.jpg" style="box-shadow: -12px 8px 16px 0px rgb(0, 0, 100) ;"
+                        width="300" class="mx-auto rounded-circle" width="300">
                 </div>
                 <div class="col-md-6 ps-5">
                     <h3>Nayeli del Carmen López López</h3>
@@ -126,7 +129,7 @@
             </div>
             <!-- FIN NAYELI-->
             <hr>
-            <!-- RODOLFO CORDOVA-->
+            <!-- ERICK-->
             <div class="row align-items-center justify-content-center zoomImage">
                 <div class="col-md-6 ps-5">
                     <h3>Erick de Jésus Alonso Ángel</h3>
@@ -140,15 +143,17 @@
                     </p>
                 </div>
                 <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="" class="mx-auto rounded-circle" width="300">
+                    <img src="img/integrantes/Erick.jpg" style="box-shadow: 12px 8px 16px 0px rgb(67, 0, 100) ;"
+                        class="mx-auto rounded-circle" width="300">
                 </div>
             </div>
-            <!-- FIN RODOLFO CORDOVA-->
+            <!-- FIN RODOLFO-->
             <hr>
             <!-- FREDDY-->
             <div class="row align-items-center justify-content-center zoomImage">
                 <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="" class="mx-auto rounded-circle" width="300">
+                    <img src="" style="box-shadow: -12px 8px 16px 0px rgb(0, 0, 100) ;" width="300"
+                        class="mx-auto rounded-circle" width="300">
                 </div>
                 <div class="col-md-6 ps-5">
                     <h3>Freddy del Pérez</h3>
