--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
         <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
           <li><a href="index.html" class="nav-link px-2 link-light">HOME</a></li>
           <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a></li>
+          <li><a href="gallery.html" class="nav-link px-2 link-light">GALLERY</a></li>
           <li><a href="about.html" class="nav-link px-2 link-light">ABOUT US</a></li>
           <li><a href="contact.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">CONTACT US</a>
           </li>
