--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
           <li><a href="index.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">HOME</a></li>
           <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a></li>
-          <li><a href="about.html" class="nav-link px-2 link-light">GALLERY</a></li>
+          <li><a href="gallery.html" class="nav-link px-2 link-light">GALLERY</a></li>
           <li><a href="about.html" class="nav-link px-2 link-light">ABOUT US</a></li>
           <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
         </ul>
@@ -75,6 +75,8 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <img src="img/resplendent-quetzal.png" style="position: relative; margin-top: -200px; margin-bottom: -250px;"
+      height="300px">
     <!-- FIN CAROUSEL -->
     <div style="padding: 30px;">
       <!-- PERFIL DE EQUIPO -->
@@ -83,7 +85,7 @@
           <!-- Hexágono 1 -->
           <div style="height: 360px;">
             <div style="text-align: center;">
-              <img src="img/Sam1.png" height="150px">
+              <img src="img/integrantes/hexagon/Sam1.png" height="150px">
               <h4>Samuel</h4>
             </div>
           </div>
@@ -91,7 +93,7 @@
           <!-- Hexágono 2 -->
           <div style="display: flex; height: 360px; align-items: center; margin: 5px;">
             <div style="text-align: center;">
-              <img src="img/Julian1.png" height="150px">
+              <img src="img/integrantes/hexagon/Julian1.png" height="150px">
               <h4>Julian</h4>
             </div>
           </div>
@@ -99,32 +101,32 @@
           <!-- Hexágono 3 -->
           <div style="height: 360px;">
             <div style="text-align: center;">
-              <img src="img/Sam1.png" height="150px">
-              <h4>Samuel</h4>
+              <img src="img/integrantes/hexagon/Rodo1.png" height="150px">
+              <h4>Rodolfo</h4>
             </div>
           </div>
 
           <!-- Hexágono 4 -->
           <div style="display: flex; height: 360px; align-items: center; margin: 5px;">
             <div style="text-align: center;">
-              <img src="img/Sam1.png" height="150px">
-              <h4>Samuel</h4>
+              <img src="img/integrantes/hexagon/Naye1.png" height="150px">
+              <h4>Nayeli</h4>
             </div>
           </div>
 
           <!-- Hexágono 5 -->
           <div style="height: 360px;">
             <div style="text-align: center;">
-              <img src="img/Sam1.png" height="150px">
-              <h4>Samuel</h4>
+              <img src="img/integrantes/hexagon/Erick1.png" height="150px">
+              <h4>Erick</h4>
             </div>
           </div>
 
           <!-- Hexágono 6 -->
           <div style="display: flex; height: 360px; align-items: center; margin: 5px;">
             <div style="text-align: center;">
-              <img src="img/Sam1.png" height="150px">
-              <h4>Samuel</h4>
+              <img src="img/integrantes/hexagon/Sam1.png" height="150px">
+              <h4>Freddy</h4>
             </div>
           </div>
 
