--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,7 @@
           <li><a href="index.html" class="nav-link px-2 link-light">HOME</a></li>
           <li><a href="portfolio.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">PORTFOLIO</a>
           </li>
+          <li><a href="gallery.html" class="nav-link px-2 link-light">GALLERY</a></li>
           <li><a href="about.html" class="nav-link px-2 link-light">ABOUT US</a></li>
           <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
         </ul>
@@ -44,37 +45,33 @@
     <!-- FIN MENU -->
     <div class="d-flex justify-content-center" style="padding: 10px;">
       <!-- CARD 1 -->
-      <div class="card" style="width: 400px; height: 450px;">
+      <div class="card box-CardPort">
         <img src="img/SlavaShop.jpg" class="card-img-top">
-
-        <div class="card-body">
-          <h5 class="card-title">Slava Shop</h5>
-          <p class="card-text"></p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="d-flex justify-content-center">
+          <h3 class="card-title">Slava Shop</h5>
+            <p class="card-text"></p>
+            <a href="https://github.com/SamuelBureloJeronimo/SpartanCode-front.git" target="_blank"
+              class="btn btn-primary github"></a>
         </div>
       </div>
       <!-- CARD 2 -->
-      <div class="card" style="margin-left: 10px; width: 400px; height: 450px;">
-        <img src="img/angular.jpg" class="card-img-top">
-
-        <div class="card-body">
-          <h5 class="card-title">Cattle Rancher Iron Management System</h5>
-          <h5 class="card-title"></h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="card box-CardPort">
+        <img src="img/SlavaShop.jpg" class="card-img-top">
+        <div class="d-flex justify-content-center">
+          <h3 class="card-title">Slava Shop</h5>
+            <p class="card-text"></p>
+            <a href="https://github.com/SamuelBureloJeronimo/SpartanCode-front.git" target="_blank"
+              class="btn btn-primary github"></a>
         </div>
       </div>
       <!-- CARD 3 -->
-      <div class="card" style="margin-left: 10px; width: 400px; height: 450px;">
-        <img src="img/angular.jpg" class="card-img-top">
-
-        <div class="card-body">
-          <h5 class="card-title">Cattle Rancher Iron Management System</h5>
-          <h5 class="card-title"></h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="card box-CardPort">
+        <img src="img/SlavaShop.jpg" class="card-img-top">
+        <div class="d-flex justify-content-center">
+          <h3 class="card-title">Slava Shop</h5>
+            <p class="card-text"></p>
+            <a href="https://github.com/SamuelBureloJeronimo/SpartanCode-front.git" target="_blank"
+              class="btn btn-primary github"></a>
         </div>
       </div>
     </div>
