--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
                 <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center">
                     <img src="img/logo1.3.png" class="img-thumbnail ms-3" width="80px" alt=""
                         style="background-color: transparent; border: none;">
-                    <h4 class="m-0 ms-3" style="color:#0df74d">VISIONSOFT</h4>
+                    <h4 class="m-0 ms-3 nameLogo" style="color:#0df74d">VISIONSOFT</h4>
                 </a>
             </div>
 
@@ -44,13 +44,13 @@
         </header>
         <!-- FIN MENU -->
         <div class="d-flex justify-content-center align-items-center" style="flex-direction: column; padding: 10px;">
-            <img src="img/Team SpartanCode/2023-09-16.jpg" class="boxGallery" style="height: 850px;">
+            <img src="img/Team SpartanCode/2023-09-16.jpg" class="boxGallery perfH">
             <img src="img/Team SpartanCode/virtual2.png" class="boxGallery">
             <img src="img/Team SpartanCode/virtual1.jpg" class="boxGallery">
-            <img src="img/Team SpartanCode/2023-09-23.jpg" class="boxGallery" style="height: 850px;">
-            <img src="img/Team SpartanCode/2023-04-29.jpg" class="boxGallery" style="height: 850px;">
+            <img src="img/Team SpartanCode/2023-09-23.jpg" class="boxGallery perfH">
+            <img src="img/Team SpartanCode/2023-04-29.jpg" class="boxGallery perfH">
             <img src="img/Team SpartanCode/2023-05-06.jpg" class="boxGallery">
-            <img src="img/Team SpartanCode/2023-05-07.jpg" class="boxGallery" style="height: 850px;">
+            <img src="img/Team SpartanCode/2023-05-07.jpg" class="boxGallery perfH">
         </div>
         <!-- FOOTER -->
         <footer class=" text-white text-center py-3" style="background-color: #0d4b0f ;">
