--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center">
           <img src="img/logo1.3.png" class="img-thumbnail ms-3" width="80px" alt=""
             style="background-color: transparent; border: none;">
-          <h4 class="m-0 ms-3" style="color:#0df74d">VISIONSOFT</h4>
+          <h4 class="m-0 ms-3 nameLogo" style="color:#0df74d">VISIONSOFT</h4>
         </a>
       </div>
 
