--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
         <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center">
           <img src="img/logo1.3.png" class="img-thumbnail ms-3" width="80px" alt=""
             style="background-color: transparent; border: none;">
-          <h4 class="m-0 ms-3" style="color:#0df74d">VISIONSOFT</h4>
+          <h4 class="m-0 ms-3 nameLogo" style="color:#0df74d">VISIONSOFT</h4>
         </a>
       </div>
 
@@ -43,7 +43,7 @@
       </nav>
     </header>
     <!-- FIN MENU -->
-    <div class="d-flex justify-content-center" style="padding: 10px;">
+    <div class="conteiner d-flex justify-content-center" style="padding: 10px;">
       <!-- CARD 1 -->
       <div class="card box-CardPort">
         <img src="img/SlavaShop.jpg" class="card-img-top">
@@ -56,22 +56,55 @@
       </div>
       <!-- CARD 2 -->
       <div class="card box-CardPort">
-        <img src="img/SlavaShop.jpg" class="card-img-top">
+        <img src="img/proyects/fierro.png" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">Slava Shop</h5>
+          <h3 class="card-title">Fierro ganadero</h5>
             <p class="card-text"></p>
-            <a href="https://github.com/SamuelBureloJeronimo/SpartanCode-front.git" target="_blank"
+            <a href="https://github.com/erickalonso98/fierro-client.git" target="_blank"
               class="btn btn-primary github"></a>
         </div>
       </div>
       <!-- CARD 3 -->
       <div class="card box-CardPort">
-        <img src="img/SlavaShop.jpg" class="card-img-top">
+        <img src="img/proyects/urgencias.png" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">Slava Shop</h5>
+          <h3 class="card-title">Sistema Estatal de Urgencias</h5>
             <p class="card-text"></p>
-            <a href="https://github.com/SamuelBureloJeronimo/SpartanCode-front.git" target="_blank"
+            <a href="https://github.com/Nayeli2208/SISTEM.git" target="_blank"
               class="btn btn-primary github"></a>
+        </div>
+      </div>
+      <!-- CARD 4 -->
+      <div class="card box-CardPort">
+        <img src="img/proyects/anime.png" class="card-img-top">
+        <div class="d-flex justify-content-center">
+          <h3 class="card-title">Anime's Web Site</h5>
+            <p class="card-text"></p>
+            <a href="https://github.com/SamuelBureloJeronimo/animeLatam-Frontend.git" target="_blank"
+              class="btn btn-primary github"></a>
+        </div>
+      </div>
+      <!-- CARD 5 -->
+      <div class="card box-CardPort">
+        <img src="img/proyects/videojuegos.png" class="card-img-top">
+        <div class="d-flex justify-content-center">
+          <h3 class="card-title">VideoGames' Web Site</h5>
+            <p class="card-text"></p>
+            <a href="https://github.com/SamuelBureloJeronimo/LuckGames.git" target="_blank"
+              class="btn btn-primary github"></a>
+        </div>
+      </div>
+      <!-- CARD 4 -->
+      <div class="card box-CardPort">
+        <img src="img/proyects/macuspanaDigital.png" class="card-img-top">
+        <div class="d-flex justify-content-center">
+          <h3 class="card-title">Digital Macuspana's Web Site</h5>
+            <p class="card-text"></p>
+            <div>
+              <a href="" target="_blank"
+                class="btn btn-primary github"></a><a href="" target="_blank"
+                class="btn btn-primary github" style="margin-left: 15px; background-image: url('./img/externo.png');"></a>
+            </div>
         </div>
       </div>
     </div>
