I working into web-responsive

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <img src="img/resplendent-quetzal.png" class="imgQuetzal" style="position: relative; margin-top: -200px; margin-bottom: -250px;"
-      height="300px">
+    <img src="img/resplendent-quetzal.png" class="imgQuetzal"
+      style="position: relative; margin-top: -200px; margin-bottom: -250px;" height="300px">
     <!-- FIN CAROUSEL -->
     <div style="padding: 30px;">
       <!-- PERFIL DE EQUIPO -->
