--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
+  <title>VisonSoft</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Bootstrap Icons -->
@@ -43,12 +43,13 @@
       </nav>
     </header>
     <!-- FIN MENU -->
+    <!-- FIN MENU -->
     <div class="conteiner d-flex justify-content-center" style="padding: 10px;">
       <!-- CARD 1 -->
       <div class="card box-CardPort">
-        <img src="img/SlavaShop.jpg" class="card-img-top">
+        <img src="img/proyects/SlavaShop.jpg" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">Slava Shop</h5>
+          <h3 class="card-title">WebSite -> SlavaShop Online Sales</h5>
             <p class="card-text"></p>
             <a href="https://github.com/SamuelBureloJeronimo/SpartanCode-front.git" target="_blank"
               class="btn btn-primary github"></a>
@@ -56,9 +57,9 @@
       </div>
       <!-- CARD 2 -->
       <div class="card box-CardPort">
-        <img src="img/proyects/fierro.png" class="card-img-top">
+        <img src="img/proyects/macuspanaDigital.png" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">Fierro ganadero</h5>
+          <h3 class="card-title">WebSite -> Fierro Ganadero</h5>
             <p class="card-text"></p>
             <a href="https://github.com/erickalonso98/fierro-client.git" target="_blank"
               class="btn btn-primary github"></a>
@@ -68,17 +69,16 @@
       <div class="card box-CardPort">
         <img src="img/proyects/urgencias.png" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">Sistema Estatal de Urgencias</h5>
+          <h3 class="card-title">WebSite -> Sistema Estatal de Urgencias</h5>
             <p class="card-text"></p>
-            <a href="https://github.com/Nayeli2208/SISTEM.git" target="_blank"
-              class="btn btn-primary github"></a>
+            <a href="https://github.com/Nayeli2208/SISTEM.git" target="_blank" class="btn btn-primary github"></a>
         </div>
       </div>
       <!-- CARD 4 -->
       <div class="card box-CardPort">
         <img src="img/proyects/anime.png" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">Anime's Web Site</h5>
+          <h3 class="card-title">WebSite -> Animes en Español</h5>
             <p class="card-text"></p>
             <a href="https://github.com/SamuelBureloJeronimo/animeLatam-Frontend.git" target="_blank"
               class="btn btn-primary github"></a>
@@ -88,22 +88,33 @@
       <div class="card box-CardPort">
         <img src="img/proyects/videojuegos.png" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">VideoGames' Web Site</h5>
+          <h3 class="card-title">WebSite -> LuckGames</h5>
             <p class="card-text"></p>
             <a href="https://github.com/SamuelBureloJeronimo/LuckGames.git" target="_blank"
               class="btn btn-primary github"></a>
         </div>
       </div>
-      <!-- CARD 4 -->
+      <!-- CARD 6 -->
       <div class="card box-CardPort">
         <img src="img/proyects/macuspanaDigital.png" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">Digital Macuspana's Web Site</h5>
+          <h3 class="card-title">WebSite -> Macuspana Digital</h5>
             <p class="card-text"></p>
             <div>
-              <a href="" target="_blank"
-                class="btn btn-primary github"></a><a href="" target="_blank"
-                class="btn btn-primary github" style="margin-left: 15px; background-image: url('./img/externo.png');"></a>
+              <a href="" target="_blank" class="btn btn-primary github"></a><a
+                href="https://macuspanadigital.000webhostapp.com/" target="_blank" class="btn btn-primary webSite"></a>
+            </div>
+        </div>
+      </div>
+      <!-- CARD 7 -->
+      <div class="card box-CardPort">
+        <img src="img/proyects/PVF.jpg" class="card-img-top">
+        <div class="d-flex justify-content-center">
+          <h3 class="card-title">DesktopApp -> Pharmacy Point-Of-Sale</h5>
+            <p class="card-text"></p>
+            <div>
+              <a href="https://github.com/SamuelBureloJeronimo/PuntoDeVentaFarmacias.git" target="_blank"
+                class="btn btn-primary github"></a>
             </div>
         </div>
       </div>
