--- a/about.html
+++ b/about.html
@@ -19,31 +19,33 @@
     <div class="divContent">
         <!-- MENU -->
         <header class="d-flex flex-wrap align-items-center justify-content-center
-    justify-content-md-between border-bottom" style="background:linear-gradient(170deg,   #0c640e  ,  #1b1e1c);;">
+    justify-content-md-between border-bottom" style="background:linear-gradient(170deg,   #0c640e  ,  #1b1e1c);">
 
             <!-- LOGO Y NOMBRE -->
-            <div class="col-md-3 mb-md-0">
+            <div class="d-flex col-md-3 mb-md-0" style="flex-direction: row;">
                 <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center">
-                    <img src="img/logo1.3.png" class="img-thumbnail ms-3" width="80px" alt=""
+                    <img src="img/logo1.3.png" class="img-thumbnail ms-3 logoImg" width="80px" alt=""
                         style="background-color: transparent; border: none;">
                     <h4 class="m-0 ms-3 nameLogo" style="color:#0df74d">VISIONSOFT</h4>
                 </a>
             </div>
-
-            <!-- FIN LOGO Y NOMBRE -->
-
+            <div class="responsiveBtn" id="btnMenu">
+                <button style="background-color: transparent; border: none;"><img src="img/menu-de-puntos.png"
+                        height="40px" style="margin: 5px;"></button>
+            </div>
             <!-- LINKS -->
-            <nav>
+            <nav class="navPrincipal" id="navPrincipal">
                 <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
-                    <li><a href="index.html" class="nav-link px-2 link-light">HOME</a></li>
-                    <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a></li>
+                    <li><a href="index.html" class="nav-link px-2 link-light">HOME</a>
+                    </li>
+                    <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a>
+                    </li>
                     <li><a href="gallery.html" class="nav-link px-2 link-light">GALLERY</a></li>
                     <li><a href="about.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">ABOUT
                             US</a></li>
                     <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
                 </ul>
             </nav>
-            <!-- FIN LINKS -->
         </header>
         <!-- FIN MENU -->
 
@@ -152,11 +154,11 @@
             <!-- FREDDY-->
             <div class="row align-items-center justify-content-center zoomImage">
                 <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="" style="box-shadow: -12px 8px 16px 0px rgb(0, 0, 100) ;" width="300"
-                        class="mx-auto rounded-circle" width="300">
+                    <img src="img/integrantes/Freddy.jpeg" style="box-shadow: -12px 8px 16px 0px rgb(0, 0, 100) ;"
+                        width="300" class="mx-auto rounded-circle" width="300">
                 </div>
                 <div class="col-md-6 ps-5">
-                    <h3>Freddy del Pérez</h3>
+                    <h3>Freddy Rubén Franco Lugo</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur magni repellendus, non
                         soluta delectus reiciendis ipsam pariatur dolore, animi beatae illum aperiam fuga nesciunt
                         ratione hic molestias mollitia eos iure?
@@ -180,6 +182,7 @@
 
         <!-- Bootstrap JS-->
         <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="js/scripts.js"></script>
     </div>
 </body>
 
