--- a/about.html
+++ b/about.html
@@ -55,13 +55,14 @@
             <div class="row align-items-center justify-content-center zoomImage">
                 <div class="col-md-6 ps-5">
                     <h3>Samuel Burelos Jerónimo</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur magni repellendus, non
-                        soluta delectus reiciendis ipsam pariatur dolore, animi beatae illum aperiam fuga nesciunt
-                        ratione hic molestias mollitia eos iure?
+                    <p>Hi, I'm Samuel, I was born on August 06th, 2023.
+                        I started to be passionate about programming since I was 12 years old in high school,
+                        it all started with a basic programming course on YouTube where I started to see the
+                        flowcharts in Raptor, I really had a lot of fun to see the flow of the program.
                     </p>
 
-                    <p>With this in mind, we decided to start a business so that in the future we could work in what
-                        we like and earn a decent living.
+                    <p>My greatest gift was to be invited to be part of this venture. I have a lot of faith and hope to
+                        take myself and my team far.
                     </p>
                 </div>
                 <div class="col-md-6 text-center" style="width: 550px;">
